# spark-decision-tree

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: terraform_apply.yaml
src/: decision_tree.py  map_features.py  train_decision_tree.py
src/model/dtc_model/data/: .part-00000-42f035fd-9067-4707-9590-c7325c4c4328-c000.snappy.parquet.crc  .part-00000-ef67922a-1a8e-4efd-8286-97942ffe2059-c000.snappy.parquet.crc  .part-00000-f6810d39-e2e9-4b0d-9839-a2e440ee24d3-c000.snappy.parquet.crc  (+3 more)
src/sample_data/: create.py
src/sample_data/data.csv/: .part-00000-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv.crc  .part-00001-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv.crc  .part-00002-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv.crc  .part-00003-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv.crc  .part-00004-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv.crc  .part-00005-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv.crc  .part-00006-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv.crc  .part-00007-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv.crc  part-00000-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv  part-00001-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv  part-00002-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv  part-00003-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv  part-00004-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv  part-00005-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv  part-00006-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv  part-00007-8b812f7e-1db3-4109-ba23-2ab7ac40b4a5-c000.csv
(+2 files in other folders)
