[tool.poetry]
name = "spark-decision-tree"
version = "0.1.0"
description = ""
authors = ["jimmfan <jimmfan@github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyspark = "^3.5.0"
networkx = "^3.2.1"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
isort = "^5.11.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "*__init__.py*"
]